--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@ecommerce-monorepo/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "nx g @nx-dotnet/core:restore"
+  },
   "private": true,
   "dependencies": {
     "react": "19.0.0",
@@ -11,6 +13,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
+    "@nx-dotnet/core": "^3.0.0",
     "@nx/devkit": "21.2.2",
     "@nx/eslint": "21.2.2",
     "@nx/eslint-plugin": "21.2.2",
