--- a/nx.json
+++ b/nx.json
@@ -85,6 +85,19 @@
       "dependsOn": [
         "^build"
       ]
+    },
+    "build": {
+      "dependsOn": [
+        "^build",
+        "codegen",
+        "^codegen"
+      ]
+    },
+    "codegen": {
+      "cache": true
+    },
+    "swagger": {
+      "cache": true
     }
   },
   "generators": {
@@ -102,6 +115,12 @@
         "style": "tailwind",
         "linter": "eslint"
       }
+    },
+    "@nx-dotnet/core:application": {
+      "solutionFile": "Ecommerce.sln"
+    },
+    "@nx-dotnet/core:library": {
+      "solutionFile": "Ecommerce.sln"
     }
   }
 }
