--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nx/vite": "21.2.2",
     "@nx/web": "21.2.2",
     "@nx/workspace": "21.2.2",
+    "@openapitools/openapi-generator-cli": "^2.13.4",
     "@playwright/test": "^1.36.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
@@ -50,6 +51,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jiti": "2.4.2",
     "jsdom": "~22.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.2.2",
     "postcss": "8.4.38",
     "prettier": "^2.6.2",
@@ -63,6 +65,7 @@
     "vitest": "^3.0.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/generated/*"
   ]
 }
