--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "Apps.api",
+  "name": "api",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/api",
