wip: geração de tipos em progresso

--- a/apps/api/project.json
+++ b/apps/api/project.json
@@ -11,7 +11,7 @@
         "{workspaceRoot}/libs/generated/api-swagger"
       ],
       "options": {
-        "output": "libs/generated/api-swagger"
+        "output": "libs/generated/api-swagger/swagger.json"
       },
       "dependsOn": [
         "build"
