chore: corrige geração dos tipos

--- a/apps/backoffice/tsconfig.json
+++ b/apps/backoffice/tsconfig.json
@@ -3,6 +3,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../libs/generated/api-types"
+    },
+    {
       "path": "./tsconfig.app.json"
     },
     {
