--- a/apps/backoffice/tsconfig.app.json
+++ b/apps/backoffice/tsconfig.app.json
@@ -29,5 +29,15 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"]
+  "include": [
+    "src/**/*.js",
+    "src/**/*.jsx",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
+  "references": [
+    {
+      "path": "../../libs/generated/api-types/tsconfig.lib.json"
+    }
+  ]
 }
