--- a/apps/api/Ecommerce.Api.csproj
+++ b/apps/api/Ecommerce.Api.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\libs\building-blocks\Ecommerce.BuildingBlocks.csproj" />
+  </ItemGroup>
+
 </Project>
